// Vitest Snapshot v1

exports[`PopulationViewer > チェックのつけはずしに応じてグラフが描画される 1`] = `
<div>
  <div
    data-highcharts-chart="0"
    id="test-chart-container"
    style="overflow: hidden;"
  >
    <div
      class="highcharts-container "
      dir="ltr"
      id="highcharts-0"
      style="position: relative; overflow: hidden; width: 600px; height: 400px; text-align: left; line-height: normal; z-index: 0; user-select: none; outline: none;"
    >
      <svg
        class="highcharts-root"
        height="400"
        style="font-family: \\"Lucida Grande\\", \\"Lucida Sans Unicode\\", Arial, Helvetica, sans-serif; font-size: 12px;"
        version="1.1"
        viewBox="0 0 600 400"
        width="600"
        xmlns="http://www.w3.org/2000/svg"
      >
        <desc>
          Created with Highcharts 10.1.0
        </desc>
        <defs>
          <clippath
            id="highcharts-1-"
          >
            <rect
              fill="none"
              height="345"
              width="570"
              x="0"
              y="0"
            />
          </clippath>
        </defs>
        <rect
          class="highcharts-background"
          fill="#ffffff"
          height="400"
          rx="0"
          ry="0"
          width="600"
          x="0"
          y="0"
        />
        <rect
          class="highcharts-plot-background"
          fill="none"
          height="345"
          width="570"
          x="10"
          y="40"
        />
        <rect
          class="highcharts-plot-border"
          data-z-index="1"
          fill="none"
          height="345"
          width="570"
          x="10"
          y="40"
        />
        <g
          class="highcharts-series-group"
          data-z-index="3"
        />
        <text
          class="highcharts-title"
          data-z-index="4"
          style="color: rgb(51, 51, 51); font-size: 18px; fill: #333333;"
          text-anchor="middle"
          x="300"
          y="24"
        />
        <text
          class="highcharts-subtitle"
          data-z-index="4"
          style="color: rgb(102, 102, 102); fill: #666666;"
          text-anchor="middle"
          x="300"
          y="10"
        />
        <text
          class="highcharts-caption"
          data-z-index="4"
          style="color: rgb(102, 102, 102); fill: #666666;"
          text-anchor="start"
          x="10"
          y="397"
        />
        <g
          class="highcharts-legend highcharts-no-tooltip"
          data-z-index="7"
        >
          <rect
            class="highcharts-legend-box"
            fill="none"
            height="8"
            rx="0"
            ry="0"
            visibility="hidden"
            width="8"
            x="0"
            y="0"
          />
          <g
            data-z-index="1"
          >
            <g />
          </g>
        </g>
        <text
          class="highcharts-credits"
          data-z-index="8"
          style="cursor: pointer; color: rgb(153, 153, 153); font-size: 9px; fill: #999999;"
          text-anchor="end"
          x="590"
          y="395"
        >
          Highcharts.com
        </text>
      </svg>
    </div>
  </div>
  <div
    data-v-app=""
  >
    <div
      class="population-viewer"
    >
      <ul
        class="ui-checkboxes"
        data-v-4ad4a939=""
      >
        
        <li
          data-v-4ad4a939=""
        >
          <div
            class="ui-checkbox"
            data-v-2d44444b=""
            data-v-4ad4a939=""
          >
            <label
              data-v-2d44444b=""
            >
              <input
                data-v-2d44444b=""
                type="checkbox"
              />
              <div
                class="ui-checkbox-box ui-checkbox-box--checked"
                data-v-2d44444b=""
              >
                <i
                  class="fa-solid fa-check"
                  data-v-2d44444b=""
                />
              </div>
              <span
                data-v-2d44444b=""
              >
                北海道
              </span>
            </label>
          </div>
        </li>
        <li
          data-v-4ad4a939=""
        >
          <div
            class="ui-checkbox"
            data-v-2d44444b=""
            data-v-4ad4a939=""
          >
            <label
              data-v-2d44444b=""
            >
              <input
                data-v-2d44444b=""
                type="checkbox"
              />
              <div
                class="ui-checkbox-box"
                data-v-2d44444b=""
              >
                <i
                  class="fa-solid fa-check"
                  data-v-2d44444b=""
                />
              </div>
              <span
                data-v-2d44444b=""
              >
                青森県
              </span>
            </label>
          </div>
        </li>
        <li
          data-v-4ad4a939=""
        >
          <div
            class="ui-checkbox"
            data-v-2d44444b=""
            data-v-4ad4a939=""
          >
            <label
              data-v-2d44444b=""
            >
              <input
                data-v-2d44444b=""
                type="checkbox"
              />
              <div
                class="ui-checkbox-box"
                data-v-2d44444b=""
              >
                <i
                  class="fa-solid fa-check"
                  data-v-2d44444b=""
                />
              </div>
              <span
                data-v-2d44444b=""
              >
                岩手県
              </span>
            </label>
          </div>
        </li>
        <li
          data-v-4ad4a939=""
        >
          <div
            class="ui-checkbox"
            data-v-2d44444b=""
            data-v-4ad4a939=""
          >
            <label
              data-v-2d44444b=""
            >
              <input
                data-v-2d44444b=""
                type="checkbox"
              />
              <div
                class="ui-checkbox-box"
                data-v-2d44444b=""
              >
                <i
                  class="fa-solid fa-check"
                  data-v-2d44444b=""
                />
              </div>
              <span
                data-v-2d44444b=""
              >
                宮城県
              </span>
            </label>
          </div>
        </li>
        <li
          data-v-4ad4a939=""
        >
          <div
            class="ui-checkbox"
            data-v-2d44444b=""
            data-v-4ad4a939=""
          >
            <label
              data-v-2d44444b=""
            >
              <input
                data-v-2d44444b=""
                type="checkbox"
              />
              <div
                class="ui-checkbox-box"
                data-v-2d44444b=""
              >
                <i
                  class="fa-solid fa-check"
                  data-v-2d44444b=""
                />
              </div>
              <span
                data-v-2d44444b=""
              >
                秋田県
              </span>
            </label>
          </div>
        </li>
        <li
          data-v-4ad4a939=""
        >
          <div
            class="ui-checkbox"
            data-v-2d44444b=""
            data-v-4ad4a939=""
          >
            <label
              data-v-2d44444b=""
            >
              <input
                data-v-2d44444b=""
                type="checkbox"
              />
              <div
                class="ui-checkbox-box"
                data-v-2d44444b=""
              >
                <i
                  class="fa-solid fa-check"
                  data-v-2d44444b=""
                />
              </div>
              <span
                data-v-2d44444b=""
              >
                山形県
              </span>
            </label>
          </div>
        </li>
        
      </ul>
      <div
        class="ui-spacer"
        data-v-317ab9a8=""
      />
      <div
        class="ui-chart"
        data-v-4ef31541=""
      >
        <div
          data-v-4ef31541=""
          id="ui-chart-container"
        />
        <span
          class="ui-chart-empty-message"
          data-v-4ef31541=""
        >
          都道府県を選択するとグラフで結果が表示されます
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PopulationViewer > チェックのつけはずしに応じてグラフが描画される 2`] = `
<div>
  <div
    data-highcharts-chart="1"
    id="test-chart-container"
    style="overflow: hidden;"
  >
    <div
      class="highcharts-container "
      dir="ltr"
      id="highcharts-3"
      style="position: relative; overflow: hidden; width: 600px; height: 400px; text-align: left; line-height: normal; z-index: 0; user-select: none; outline: none;"
    >
      <svg
        class="highcharts-root"
        height="400"
        style="font-family: \\"Lucida Grande\\", \\"Lucida Sans Unicode\\", Arial, Helvetica, sans-serif; font-size: 12px;"
        version="1.1"
        viewBox="0 0 600 400"
        width="600"
        xmlns="http://www.w3.org/2000/svg"
      >
        <desc>
          Created with Highcharts 10.1.0
        </desc>
        <defs>
          <clippath
            id="highcharts-4-"
          >
            <rect
              fill="none"
              height="345"
              width="570"
              x="0"
              y="0"
            />
          </clippath>
        </defs>
        <rect
          class="highcharts-background"
          fill="#ffffff"
          height="400"
          rx="0"
          ry="0"
          width="600"
          x="0"
          y="0"
        />
        <rect
          class="highcharts-plot-background"
          fill="none"
          height="345"
          width="570"
          x="10"
          y="40"
        />
        <rect
          class="highcharts-plot-border"
          data-z-index="1"
          fill="none"
          height="345"
          width="570"
          x="10"
          y="40"
        />
        <g
          class="highcharts-series-group"
          data-z-index="3"
        />
        <text
          class="highcharts-title"
          data-z-index="4"
          style="color: rgb(51, 51, 51); font-size: 18px; fill: #333333;"
          text-anchor="middle"
          x="300"
          y="24"
        />
        <text
          class="highcharts-subtitle"
          data-z-index="4"
          style="color: rgb(102, 102, 102); fill: #666666;"
          text-anchor="middle"
          x="300"
          y="10"
        />
        <text
          class="highcharts-caption"
          data-z-index="4"
          style="color: rgb(102, 102, 102); fill: #666666;"
          text-anchor="start"
          x="10"
          y="397"
        />
        <g
          class="highcharts-legend highcharts-no-tooltip"
          data-z-index="7"
        >
          <rect
            class="highcharts-legend-box"
            fill="none"
            height="8"
            rx="0"
            ry="0"
            visibility="hidden"
            width="8"
            x="0"
            y="0"
          />
          <g
            data-z-index="1"
          >
            <g />
          </g>
        </g>
        <text
          class="highcharts-credits"
          data-z-index="8"
          style="cursor: pointer; color: rgb(153, 153, 153); font-size: 9px; fill: #999999;"
          text-anchor="end"
          x="590"
          y="395"
        >
          Highcharts.com
        </text>
      </svg>
    </div>
  </div>
  <div
    data-v-app=""
  >
    <div
      class="population-viewer"
    >
      <ul
        class="ui-checkboxes"
        data-v-4ad4a939=""
      >
        
        <li
          data-v-4ad4a939=""
        >
          <div
            class="ui-checkbox"
            data-v-2d44444b=""
            data-v-4ad4a939=""
          >
            <label
              data-v-2d44444b=""
            >
              <input
                data-v-2d44444b=""
                type="checkbox"
              />
              <div
                class="ui-checkbox-box"
                data-v-2d44444b=""
              >
                <i
                  class="fa-solid fa-check"
                  data-v-2d44444b=""
                />
              </div>
              <span
                data-v-2d44444b=""
              >
                北海道
              </span>
            </label>
          </div>
        </li>
        <li
          data-v-4ad4a939=""
        >
          <div
            class="ui-checkbox"
            data-v-2d44444b=""
            data-v-4ad4a939=""
          >
            <label
              data-v-2d44444b=""
            >
              <input
                data-v-2d44444b=""
                type="checkbox"
              />
              <div
                class="ui-checkbox-box"
                data-v-2d44444b=""
              >
                <i
                  class="fa-solid fa-check"
                  data-v-2d44444b=""
                />
              </div>
              <span
                data-v-2d44444b=""
              >
                青森県
              </span>
            </label>
          </div>
        </li>
        <li
          data-v-4ad4a939=""
        >
          <div
            class="ui-checkbox"
            data-v-2d44444b=""
            data-v-4ad4a939=""
          >
            <label
              data-v-2d44444b=""
            >
              <input
                data-v-2d44444b=""
                type="checkbox"
              />
              <div
                class="ui-checkbox-box"
                data-v-2d44444b=""
              >
                <i
                  class="fa-solid fa-check"
                  data-v-2d44444b=""
                />
              </div>
              <span
                data-v-2d44444b=""
              >
                岩手県
              </span>
            </label>
          </div>
        </li>
        <li
          data-v-4ad4a939=""
        >
          <div
            class="ui-checkbox"
            data-v-2d44444b=""
            data-v-4ad4a939=""
          >
            <label
              data-v-2d44444b=""
            >
              <input
                data-v-2d44444b=""
                type="checkbox"
              />
              <div
                class="ui-checkbox-box"
                data-v-2d44444b=""
              >
                <i
                  class="fa-solid fa-check"
                  data-v-2d44444b=""
                />
              </div>
              <span
                data-v-2d44444b=""
              >
                宮城県
              </span>
            </label>
          </div>
        </li>
        <li
          data-v-4ad4a939=""
        >
          <div
            class="ui-checkbox"
            data-v-2d44444b=""
            data-v-4ad4a939=""
          >
            <label
              data-v-2d44444b=""
            >
              <input
                data-v-2d44444b=""
                type="checkbox"
              />
              <div
                class="ui-checkbox-box"
                data-v-2d44444b=""
              >
                <i
                  class="fa-solid fa-check"
                  data-v-2d44444b=""
                />
              </div>
              <span
                data-v-2d44444b=""
              >
                秋田県
              </span>
            </label>
          </div>
        </li>
        <li
          data-v-4ad4a939=""
        >
          <div
            class="ui-checkbox"
            data-v-2d44444b=""
            data-v-4ad4a939=""
          >
            <label
              data-v-2d44444b=""
            >
              <input
                data-v-2d44444b=""
                type="checkbox"
              />
              <div
                class="ui-checkbox-box"
                data-v-2d44444b=""
              >
                <i
                  class="fa-solid fa-check"
                  data-v-2d44444b=""
                />
              </div>
              <span
                data-v-2d44444b=""
              >
                山形県
              </span>
            </label>
          </div>
        </li>
        
      </ul>
      <div
        class="ui-spacer"
        data-v-317ab9a8=""
      />
      <div
        class="ui-chart"
        data-v-4ef31541=""
      >
        <div
          data-v-4ef31541=""
          id="ui-chart-container"
        />
        <span
          class="ui-chart-empty-message"
          data-v-4ef31541=""
        >
          都道府県を選択するとグラフで結果が表示されます
        </span>
      </div>
    </div>
  </div>
</div>
`;
